--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                           </p>
                           <p>In the workshop ,you will learn about the cloud computing and its services which includes databases, software and networking. </p>
                           <p>And about Mobile Technology and its types which are  Cloud-based services that are cheaper than using any of the systems Technology.</p>
-                      </div><i class="ga fa-regular fa-wand-sparkles"></i> 
+                      </div>
               </div>
             </div>
             <div class="container" id="paper">
