--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
   <html lang="en">
       <head>
           <meta charset="UTF-8">
@@ -36,7 +36,9 @@
               </div>
             <div class="container-bg">
               <video autoplay muted loop id="myVideo">
-                <source src="vvideo.mp4" type="video/mp4">
+                 <!-- <iframe src="https://player.vimeo.com/video/926918058?background=1"frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <source src="https://www.vecteezy.com/video/38059518-3d-number-grid-loop" type="video/mp4"> -->
+          <source src="video.mp4" type="video/mp4">
               </video>
               <div onclick="scrollhome()" id="arrowAnim">
                 <div class="arrowSliding">
@@ -104,9 +106,7 @@
                                 </div> 
 
                                 <div class="card__back">
-                                <p class="card__body"> Paper Presentation event. <br><b>Rules</b><br>
-                                  1. A team can comprise 2 to 3 members.<br>
-                                  2. The topics should be selected given below.</p>
+                                <p class="card__body"> A team of maximum four members can present and showcase their project/ research content/ technical topic and their presentation skills.You can refer broucher to choose  technical topics for your presentation.</p>
                             </div>
                         </div>
                     </div>
@@ -119,9 +119,10 @@
                                 </div> 
 
                                 <div class="card__back">
-                                <p class="card__body"> Paper Presentation event. <br><b>Rules</b><br>
-                                  1. A team can comprise 2 to 3 members.<br>
-                                  2. The topics should be selected given below.</p>
+                                <p class="card__body"> Join us for an exhilarating technical quiz where your knowledge and understanding of various concepts will be put to the test!
+
+First round comprises of pen and paper test
+Second round there will be lock out buzzer</p>
                             </div>
                         </div>
                     </div>
@@ -134,9 +135,10 @@
                                 </div> 
 
                                 <div class="card__back">
-                                <p class="card__body"> Paper Presentation event. <br><b>Rules</b><br>
-                                  1. A team can comprise 2 to 3 members.<br>
-                                  2. The topics should be selected given below.</p>
+                                <p class="card__body"> This event involves complex circuit analysis and skills to perform practically and execute using analog devices and components. As the name suggests the event requires knowledge about circuit making on the bread board.
+
+Questions Will Be Based On 'Electronics & Circuit Fundamentals'
+The 1st round Comprises Of Pen & Paper Round And 2nd round is Circuit Debugging.</p>
                             </div>
                         </div>
                     </div>
@@ -153,9 +155,7 @@
                               </div> 
 
                               <div class="card__back">
-                              <p class="card__body"> Paper Presentation event. <br><b>Rules</b><br>
-                                1. A team can comprise 2 to 3 members.<br>
-                                2. The topics should be selected given below.</p>
+                              <p class="card__body"> Get ready for  entertaining journey of  our non-technical quiz which covers a wide range of topics, from pop culture to history, literature to current events. Challenge yourself and your friends to see who can answer the most questions correctly. Join us for a day of laughter, knowledge, and friendly competition!</p>
                           </div>
                       </div>
                   </div>
@@ -183,9 +183,7 @@
                               </div> 
 
                               <div class="card__back">
-                              <p class="card__body"> Paper Presentation event. <br><b>Rules</b><br>
-                                1. A team can comprise 2 to 3 members.<br>
-                                2. The topics should be selected given below.</p>
+                              <p class="card__body"> Slides of pictures related to movie songs, general places and words related to some content</p>
                           </div>
                       </div>
                   </div>
@@ -202,7 +200,7 @@
                           </p>
                           <p>In the workshop ,you will learn about the cloud computing and its services which includes databases, software and networking. </p>
                           <p>And about Mobile Technology and its types which are  Cloud-based services that are cheaper than using any of the systems Technology.</p>
-                      </div>
+      
               </div>
             </div>
             <div class="container" id="paper">
@@ -287,20 +285,21 @@
                       <div class="footer__col">
                           <h4>Contact</h4>
                               <ul>
-                                  <li><i class="fa-solid fa-phone"></i><a href="tel">+91 9095115614</a></li>
-                                  <li><i class="fa-solid fa-phone"></i><a href="tel">+91 8838699843</a></li>
+                                  <li><i class="fa-solid fa-phone"></i><a href="tel">+91 8667051790</a></li>
+                                  <li><i class="fa-solid fa-phone"></i><a href="tel">+91 8838208676</a></li>
 
                               </ul>
                           </div>
                           <div class="footer__col">
                               <h4>Schedule</h4>
-                              <ul>
+Will be updated soon!
+                           <!---   <ul>
                                   <li><a href="#">Inauguration : 9:30am - 10:30am </a></li>
                                   <li><a href="#">Tech Events & Workshop : 10:30am - 12:00pm  </a></li>
                                   <li><a href="#">Non-Tech Events : 12:00pm - 1:30pm </a></li>
                                   <li><a href="#">Lunch Break : 1:30pm - 2:30pm </a></li>
                                   <li><a href="#">Fun Events : 2:30pm - 3:30pm </a></li>
-                              </ul>
+                              </ul>--->
                           </div>
                           <div class="footer__col">
                               <h4>Register Fast</h4>
@@ -313,8 +312,8 @@
                           <div class="footer__col">
                               <h4>Follow Us</h4>
                               <ul class="social-links">
-                                  <li><a href="https://instagram.com/electrospitzer?igshid=ZDdkNTZiNTM="><i class="fab fa-instagram"></i></a></li>
-                                  <li><a href="mailto:electrospitzer2023@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
+                                  <li><a href="https://www.instagram.com/electrospitzer2024?utm_source=qr&igsh=MXIycGUwd252aWlvdQ=="><i class="fab fa-instagram"></i></a></li>
+                                  <li><a href="mailto:electrospitzer2024@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
 
                               </ul>
                           </div>
