--- a/index.html
+++ b/index.html
@@ -168,9 +168,11 @@ The 1st round Comprises Of Pen & Paper Round And 2nd round is Circuit Debugging.
                               </div> 
 
                               <div class="card__back">
-                              <p class="card__body"> Paper Presentation event. <br><b>Rules</b><br>
-                                1. A team can comprise 2 to 3 members.<br>
-                                2. The topics should be selected given below.</p>
+                              <p class="card__body"> "Open your eyes, look at screen & sharpen your brain." <br> 
+                               A Slide of pictures will be presented and the participants should write the pictures what they have seen in correct order.<br>
+                               Guidelines and rules:<br>
+                               1. Two Members can participate in one team.<br>
+                               2. Candidates who clear the pen and paper round will Be participating in a buzzer round.</p>
                           </div>
                       </div>
                   </div>
