--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   <span>Anna University Regional Campus Tirunelveli <br>Department of ECE</span>
                   <span>presents</span>
                   <span>A Regional Level Symposium</span>
-                  <span>Electospitzer 2k24</span>
+                  <span style="color:blueviolet;>Electospitzer 2k24</span>
                   <div class="button">
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLScE4b6Srk1lgk2WEZMBneikJcNsLDFA-Ae9U-b-F8FbCujs6Q/viewform">Register Now</a>
                    </div>
@@ -198,11 +198,6 @@ The 1st round Comprises Of Pen & Paper Round And 2nd round is Circuit Debugging.
                       <div class="work-content">
                           <h1>INDIGENOUS 5G & 6G - A MILESTONE IN 
                           INDIAN TELECOM</h1>
-                          <p>The senior solutions Architect from Inspection Depot Inc -Florida is going to take a lecture on "Cloud computing and Mobile technology. "
-                          </p>
-                          <p>In the workshop ,you will learn about the cloud computing and its services which includes databases, software and networking. </p>
-                          <p>And about Mobile Technology and its types which are  Cloud-based services that are cheaper than using any of the systems Technology.</p>
-      
               </div>
             </div>
             <div class="container" id="paper">
