--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   <span>Anna University Regional Campus Tirunelveli <br>Department of ECE</span>
                   <span>presents</span>
                   <span>A Regional Level Symposium</span>
-                  <span style="color:blueviolet;>Electospitzer 2k24</span>
+                  <span style="color:blueviolet;">Electospitzer 2k24</span>
                   <div class="button">
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLScE4b6Srk1lgk2WEZMBneikJcNsLDFA-Ae9U-b-F8FbCujs6Q/viewform">Register Now</a>
                    </div>
