--- a/index.html
+++ b/index.html
@@ -290,13 +290,14 @@ The 1st round Comprises Of Pen & Paper Round And 2nd round is Circuit Debugging.
                           <div class="footer__col">
                               <h4>Schedule</h4>
 Will be updated soon!
-                           <!---   <ul>
+                              <ul>
                                   <li><a href="#">Inauguration : 9:30am - 10:30am </a></li>
-                                  <li><a href="#">Tech Events & Workshop : 10:30am - 12:00pm  </a></li>
-                                  <li><a href="#">Non-Tech Events : 12:00pm - 1:30pm </a></li>
+                                  <li><a href="#">Workshop : 10:30am - 11:45am  </a></li>
+                                  <li><a href="#">Technical Events : 11:45am - 1:30pm </a></li>
                                   <li><a href="#">Lunch Break : 1:30pm - 2:30pm </a></li>
-                                  <li><a href="#">Fun Events : 2:30pm - 3:30pm </a></li>
-                              </ul>--->
+                                  <li><a href="#">Non-Technical Events: 2:30pm - 3:30pm </a></li>
+                                  <li><a href="#">Prize Distributions: 3:30pm - 4:30pm </a></li>
+                              </ul>
                           </div>
                           <div class="footer__col">
                               <h4>Register Fast</h4>
